--- a/vt/specs/character/basic.yaml
+++ b/vt/specs/character/basic.yaml
@@ -61,7 +61,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 background:
                   resourceId: alkejf3la
