--- a/vt/specs/background/animation-1.yaml
+++ b/vt/specs/background/animation-1.yaml
@@ -80,7 +80,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 background:
                   resourceId: alkejf3la
