--- a/vt/specs/background/animation-2.yaml
+++ b/vt/specs/background/animation-2.yaml
@@ -70,7 +70,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 background:
                   resourceId: alkejf3la
