--- a/vt/specs/background/layout.yaml
+++ b/vt/specs/background/layout.yaml
@@ -78,7 +78,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 background:
                   resourceId: j3i8dk32
