--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -1684,7 +1684,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 # setNextLineConfig:
                 #   manual:
@@ -1721,7 +1721,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: storyScreenLayout
                 background:
                   resourceId: f3wklajf32
@@ -1825,7 +1825,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: storyScreenLayout
                   resourceType: layout
                 dialogue:
@@ -1880,7 +1880,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: extraScreenLayout
                   resourceType: layout
                 dialogue:
