--- a/vt/specs/dialogue/with-background.yaml
+++ b/vt/specs/dialogue/with-background.yaml
@@ -109,7 +109,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 dialogue:
                   gui:
