--- a/vt/specs/dialogue/with-localization.yaml
+++ b/vt/specs/dialogue/with-localization.yaml
@@ -140,7 +140,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
+                base:
                   resourceId: screen1
                 dialogue:
                   gui:
