--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -152,7 +152,7 @@ resources:
       default: 50
       persistence: device
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -1685,7 +1685,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 # setNextLineConfig:
                 #   manual:
                 # enabled: true
