--- a/vt/specs/sectionTransition/basic.yaml
+++ b/vt/specs/sectionTransition/basic.yaml
@@ -19,7 +19,7 @@ screen:
 
 resources:
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -57,7 +57,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 background:
                   resourceId: alkejf3la
             - id: line2
@@ -70,7 +70,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 background:
                   resourceId: 8a3lkja
             - id: line2
@@ -87,7 +87,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 background:
                   resourceId: img3
             - id: line2
