--- a/vt/specs/background/layout.yaml
+++ b/vt/specs/background/layout.yaml
@@ -28,7 +28,7 @@ resources:
       width: 1920
       height: 1080
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -79,7 +79,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 background:
                   resourceId: j3i8dk32
                   resourceType: layout
