--- a/vt/specs/choice/basic.yaml
+++ b/vt/specs/choice/basic.yaml
@@ -14,7 +14,7 @@ screen:
 
 resources:
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -104,7 +104,7 @@ story:
             - id: line1
               actions:
                 # screen:
-                #   resourceId: screen1
+                #   resourceId: base1
                 choice:
                   resourceId: fi3l
                   items:
@@ -130,7 +130,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 dialogue:
                   mode: adv
                   gui:
@@ -155,7 +155,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 dialogue:
                   mode: adv
                   gui:
