--- a/vt/specs/dialogue/with-localization.yaml
+++ b/vt/specs/dialogue/with-localization.yaml
@@ -29,7 +29,7 @@ l10n:
 
 resources:
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -141,7 +141,7 @@ story:
             - id: line1
               actions:
                 base:
-                  resourceId: screen1
+                  resourceId: base1
                 dialogue:
                   gui:
                     resourceId: fi3l
