--- a/vt/specs/background/layout.yaml
+++ b/vt/specs/background/layout.yaml
@@ -28,7 +28,7 @@ resources:
       width: 1920
       height: 1080
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -78,8 +78,8 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
-                  resourceId: screen1
+                base:
+                  resourceId: base1
                 background:
                   resourceId: j3i8dk32
                   resourceType: layout
