--- a/vt/specs/character/basic.yaml
+++ b/vt/specs/character/basic.yaml
@@ -27,7 +27,7 @@ resources:
       width: 50
       height: 50
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -61,8 +61,8 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
-                  resourceId: screen1
+                base:
+                  resourceId: base1
                 background:
                   resourceId: alkejf3la
                 character:
