--- a/vt/specs/layout/basic.yaml
+++ b/vt/specs/layout/basic.yaml
@@ -14,7 +14,7 @@ screen:
 
 resources:
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -65,7 +65,7 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
-                  resourceId: screen1
+                base:
+                  resourceId: base1
                 layout:
                   resourceId: j3i8dk32
