--- a/vt/specs/visual/transform.yaml
+++ b/vt/specs/visual/transform.yaml
@@ -14,7 +14,7 @@ screen:
 
 resources:
   layouts:
-    screen1:
+    base1:
       elements:
         - id: af32
           type: rect
@@ -53,8 +53,8 @@ story:
           lines:
             - id: line1
               actions:
-                screen:
-                  resourceId: screen1
+                base:
+                  resourceId: base1
                 visual:
                   items:
                     - id: visual-1
