--- a/spec/system/renderState/addVisuals.spec.yaml
+++ b/spec/system/renderState/addVisuals.spec.yaml
@@ -182,82 +182,6 @@ out:
         duration: 300
   audio: []
 ---
-case: add visual with both in and out animations
-in:
-  - elements:
-      - id: "story"
-        type: "container"
-        x: 0
-        y: 0
-        children: []
-    animations: []
-    audio: []
-  - presentationState:
-      visual:
-        items:
-          - id: "visual1"
-            resourceId: "image1"
-            resourceType: "image"
-            transformId: "transform1"
-            animations:
-              in:
-                animationId: "slideIn"
-              out:
-                animationId: "slideOut"
-    resources:
-      images:
-        image1:
-          fileId: "slide.png"
-      transforms:
-        transform1:
-          x: 150
-          y: 75
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-      animations:
-        slideIn:
-          properties:
-            x: [-50, 150]
-            duration: 400
-        slideOut:
-          properties:
-            x: [150, 350]
-            duration: 400
-out:
-  elements:
-    - id: "story"
-      type: "container"
-      x: 0
-      y: 0
-      children:
-        - id: "visual-visual1"
-          type: "sprite"
-          src: "slide.png"
-          x: 150
-          y: 75
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-  animations:
-    - id: "visual1-animation"
-      type: "tween"
-      targetId: "visual-visual1"
-      properties:
-        x: [-50, 150]
-        duration: 400
-    - id: "visual1-animation-2"
-      type: "tween"
-      targetId: "visual-visual1"
-      properties:
-        x: [150, 350]
-        duration: 400
-  audio: []
----
 case: multiple visual items
 in:
   - elements:
@@ -402,135 +326,6 @@ out:
   animations: []
   audio: []
 ---
-case: visual item missing resourceId - skip item
-in:
-  - elements:
-      - id: "story"
-        type: "container"
-        x: 0
-        y: 0
-        children: []
-    animations: []
-    audio: []
-  - presentationState:
-      visual:
-        items:
-          - id: "visual1"
-            resourceType: "image"
-            transformId: "transform1"
-    resources:
-      images:
-        image1:
-          fileId: "test.png"
-      transforms:
-        transform1:
-          x: 0
-          y: 0
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-out:
-  elements:
-    - id: "story"
-      type: "container"
-      x: 0
-      y: 0
-      children: []
-  animations: []
-  audio: []
----
-case: visual item missing resourceType - skip item
-in:
-  - elements:
-      - id: "story"
-        type: "container"
-        x: 0
-        y: 0
-        children: []
-    animations: []
-    audio: []
-  - presentationState:
-      visual:
-        items:
-          - id: "visual1"
-            resourceId: "image1"
-            transformId: "transform1"
-    resources:
-      images:
-        image1:
-          fileId: "test.png"
-      transforms:
-        transform1:
-          x: 0
-          y: 0
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-out:
-  elements:
-    - id: "story"
-      type: "container"
-      x: 0
-      y: 0
-      children:
-        - id: "visual-visual1"
-          type: "sprite"
-          src: "test.png"
-          x: 0
-          y: 0
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-  animations: []
-  audio: []
----
-case: unsupported resourceType - skip item
-in:
-  - elements:
-      - id: "story"
-        type: "container"
-        x: 0
-        y: 0
-        children: []
-    animations: []
-    audio: []
-  - presentationState:
-      visual:
-        items:
-          - id: "visual1"
-            resourceId: "video1"
-            resourceType: "video"
-            transformId: "transform1"
-    resources:
-      images: {}
-      videos:
-        video1:
-          fileId: "test.mp4"
-      transforms:
-        transform1:
-          x: 0
-          y: 0
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-out:
-  elements:
-    - id: "story"
-      type: "container"
-      x: 0
-      y: 0
-      children: []
-  animations: []
-  audio: []
----
 case: resource not found - skip item
 in:
   - elements:
@@ -551,42 +346,6 @@ in:
     resources:
       images:
         existing:
-          fileId: "test.png"
-      transforms:
-        transform1:
-          x: 0
-          y: 0
-          anchorX: 0.5
-          anchorY: 0.5
-          rotation: 0
-          scaleX: 1
-          scaleY: 1
-out:
-  elements:
-    - id: "story"
-      type: "container"
-      x: 0
-      y: 0
-      children: []
-  animations: []
-  audio: []
----
-case: no visual items - return unchanged state
-in:
-  - elements:
-      - id: "story"
-        type: "container"
-        x: 0
-        y: 0
-        children: []
-    animations: []
-    audio: []
-  - presentationState:
-      visual:
-        items: []
-    resources:
-      images:
-        image1:
           fileId: "test.png"
       transforms:
         transform1:
@@ -632,5 +391,284 @@ out:
       x: 0
       y: 0
       children: []
+  animations: []
+  audio: []
+---
+case: add visual layout with transform to story container
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+    audio: []
+  - presentationState:
+      visual:
+        items:
+          - id: "rain"
+            resourceId: "rainLayout"
+            transformId: "transform1"
+    resources:
+      layouts:
+        rainLayout:
+          elements:
+            - id: "drop1"
+              type: "sprite"
+              src: "raindrop.png"
+              width: 20
+              height: 40
+              x: 0
+              y: 0
+            - id: "drop2"
+              type: "sprite"
+              src: "raindrop.png"
+              width: 20
+              height: 40
+              x: 50
+              y: 100
+      transforms:
+        transform1:
+          x: 500
+          y: 0
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children:
+        - id: "visual-rain"
+          type: "container"
+          x: 500
+          y: 0
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+          children:
+            - id: "drop1"
+              type: "sprite"
+              src: "raindrop.png"
+              width: 20
+              height: 40
+              x: 0
+              y: 0
+            - id: "drop2"
+              type: "sprite"
+              src: "raindrop.png"
+              width: 20
+              height: 40
+              x: 50
+              y: 100
+  animations: []
+  audio: []
+---
+case: add visual layout with in animation
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+    audio: []
+  - presentationState:
+      visual:
+        items:
+          - id: "overlay"
+            resourceId: "overlayLayout"
+            transformId: "transform1"
+            animations:
+              in:
+                animationId: "fadeIn"
+    resources:
+      layouts:
+        overlayLayout:
+          elements:
+            - id: "bg"
+              type: "rect"
+              fill: "#000000"
+              width: 1920
+              height: 1080
+      transforms:
+        transform1:
+          x: 0
+          y: 0
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+      animations:
+        fadeIn:
+          properties:
+            alpha: [0, 1]
+            duration: 500
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children:
+        - id: "visual-overlay"
+          type: "container"
+          x: 0
+          y: 0
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+          children:
+            - id: "bg"
+              type: "rect"
+              fill: "#000000"
+              width: 1920
+              height: 1080
+  animations:
+    - id: "overlay-animation"
+      type: "tween"
+      targetId: "visual-overlay"
+      properties:
+        alpha: [0, 1]
+        duration: 500
+  audio: []
+---
+case: layout not found - skip item
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+    audio: []
+  - presentationState:
+      visual:
+        items:
+          - id: "missing"
+            resourceId: "nonExistentLayout"
+            transformId: "transform1"
+    resources:
+      layouts:
+        existingLayout:
+          elements:
+            - id: "test"
+              type: "sprite"
+              src: "test.png"
+      transforms:
+        transform1:
+          x: 0
+          y: 0
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children: []
+  animations: []
+  audio: []
+---
+case: mix of image and layout visuals
+in:
+  - elements:
+      - id: "story"
+        type: "container"
+        x: 0
+        y: 0
+        children: []
+    animations: []
+    audio: []
+  - presentationState:
+      visual:
+        items:
+          - id: "logo"
+            resourceId: "logoImage"
+            transformId: "transform1"
+          - id: "particles"
+            resourceId: "particleLayout"
+            transformId: "transform2"
+    resources:
+      images:
+        logoImage:
+          fileId: "logo.png"
+          width: 300
+          height: 100
+      layouts:
+        particleLayout:
+          elements:
+            - id: "p1"
+              type: "sprite"
+              src: "particle.png"
+              width: 5
+              height: 5
+      transforms:
+        transform1:
+          x: 100
+          y: 50
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+        transform2:
+          x: 500
+          y: 300
+          anchorX: 0.5
+          anchorY: 0.5
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+out:
+  elements:
+    - id: "story"
+      type: "container"
+      x: 0
+      y: 0
+      children:
+        - id: "visual-logo"
+          type: "sprite"
+          src: "logo.png"
+          width: 300
+          height: 100
+          x: 100
+          y: 50
+          anchorX: 0
+          anchorY: 0
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+        - id: "visual-particles"
+          type: "container"
+          x: 500
+          y: 300
+          anchorX: 0.5
+          anchorY: 0.5
+          rotation: 0
+          scaleX: 1
+          scaleY: 1
+          children:
+            - id: "p1"
+              type: "sprite"
+              src: "particle.png"
+              width: 5
+              height: 5
   animations: []
   audio: []
